Implement SQL Server authentication, add login functionality, and update layout

--- a/Web.config
+++ b/Web.config
@@ -732,14 +732,15 @@
     <add key="FAHRURi" value="https://mgov.mof.gov.ae:443/soa-infra/services/default/PRDEBS_PLSQL_XXFAHR_MOCD_WEBSERVICE_PKG/XXFAHR_MOCD_WEBSERVICE_PKG_Service" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.7.2" />
-    <httpRuntime targetFramework="4.7.2" executionTimeout="900" />
-    <!--<authentication mode="none" />
-		<authorization>
-			<allow users="msa\kidar.muhamed,mocddev\ateeq.rehman,msa\ramil.malik,msa\safeer.mumraiz" />
-			<deny users="*" />
-		</authorization>-->
-		<customErrors mode="On" />
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login" timeout="2880" />
+    </authentication>
+    <membership defaultProvider="SqlProvider">
+      <providers>
+        <add name="SqlProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="INTEGRATION_CONN" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
+      </providers>
+    </membership>
+    <customErrors mode="On" />
   </system.web>
   <system.webServer>
     <handlers>
