--- a/Web.config
+++ b/Web.config
@@ -735,6 +735,9 @@
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
+    <authorization>
+      <deny users="?" />
+    </authorization>
     <customErrors mode="On" />
   </system.web>
   <system.webServer>
