--- a/Web.config
+++ b/Web.config
@@ -5,6 +5,9 @@
   -->
 <configuration>
   <appSettings>
+    
+<add key="owin:appStartup" value="MOCDIntegrations.Startup" />
+
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
