Implemented Role-Based Authentication and Authorization with Dynamic Role Management

--- a/Web.config
+++ b/Web.config
@@ -4,14 +4,19 @@
   https://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
-  <appSettings>
-    
-<add key="owin:appStartup" value="MOCDIntegrations.Startup" />
 
+
+
+
+  <appSettings>
+    <add key="owin:appStartup" value="MOCDIntegrations.MvcApplication" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <!-- Other existing appSettings -->
+
+
     <add key="Mohre_username" value="MOCDprdconsumer2" />
     <add key="Mohre_password" value="mocd@conuser$24" />
     <add key="Mohre_Key" value="e27a5620-b437-11e9-91ef-823ef1a02231" />
